--- a/web-app/src/app.css
+++ b/web-app/src/app.css
@@ -1,21 +1,105 @@
-*{
+* {
     border: 0;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
     font-family: 'system-ui';
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
+    width: 100%;
+    /* 
     margin: 0 10% 0 10%;
-    padding: 1rem;
+    
 
     @media screen and (max-width: 1350px) {
         margin: 0 5% 0 5%;
     }
+
+    */
+}
+
+.container_main {
+    display: flex;
+    flex-direction: column;
+    /* background-color: aqua; */
+    width: 100%;
+}
+
+.container_test {
+    width: 100%;
+    height: 30%;
+    /* background-color: red; */
+}
+
+.container_info {
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-between; */
+    align-items: center;
+    width: 100%;
+    height: 70%;
+}
+
+.map_view {
+    width: 50%;
+    height: 100%;
+    /* background-color: blue; */
+}
+
+.widget_view {
+    width: 50%;
+    height: 100%;
+    /* background-color: green; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container_devices {
+    width: 30%;
+    height: 100%;
+    /* background-color: azure; */
+    margin: 0 1rem 0 1rem;
+
+    @media screen and (max-width: 1350px) {
+        width: 50%;
+        margin: 0 0.5rem 0 0.5rem;
+    }
+}
+
+.container_notifications {
+    width: 70%;
+    height: 100%;
+    /*background-color: yellow; */
+    margin: 0 1rem 0 1rem;
+
+    @media screen and (max-width: 1350px) {
+        width: 50%;
+        margin: 0 0.5rem 0 0.5rem;
+    }
+}
+
+.container_line {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+.line {
+    width: 80%;
+    margin: 0.5rem 0 0.5rem 0;
+    height: 1px;
+    background-color: #000;
+    border-radius: 0.5rem;
+}
+
+.title{
+    font-size: 1.5rem;
+    color: #000;
 }
