--- a/web-app/src/components/navBar/styles.css
+++ b/web-app/src/components/navBar/styles.css
@@ -1,14 +1,18 @@
 .container_navbar {
+    width: 100%;
+}
+
+.container_navbar_elements {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #EEEEEE;
-    border-radius: 0.3rem;
-    padding: 0.5rem 1rem;
-    width: 100%;
+    margin: 1% 10% 1% 10%;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
-.container_avatar_navbar{
+.container_avatar_navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
