--- a/web-app/src/components/navBar/styles.css
+++ b/web-app/src/components/navBar/styles.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #EEEEEE;
-    margin: 1% 5% 1% 5%;
+    margin: 0.5%;
     border-radius: 0.5rem;
     padding: 0.5rem 1rem 0.5rem 1rem;
 }
