--- a/web-app/src/components/ui/MapView/Marker/styles.css
+++ b/web-app/src/components/ui/MapView/Marker/styles.css
@@ -1,12 +1,25 @@
 .container_marker {
-    width: 6rem;
-    height: 2rem;
     background-color: #D4EAFB;
     color: #007AFF;
     border-radius: 0.25rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    font-size: 1rem;
-    font-weight: 500;
+    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+    position: relative;
+}
+
+.name {
+    font-size: 0.85rem;
+    padding-left: 0.2rem;
+}
+
+.circle {
+    width: 0.75rem;
+    height: 0.75rem;
+    border-radius: 50%;
+    background-color: #007AFF;
+    position: absolute;
+    top: -0.35rem;
+    left: -0.35rem;
 }
